1. Fix compilation error under elixir 1.13 2. Prepare hex publish

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,9 @@
 {pre_hooks, [{"(linux|darwin)", compile, "make V=0 -C c_src -j 8"}]}.
 {post_hooks, [{"(linux|darwin)", clean, "make -C c_src clean"}]}.
+
 {artifacts, ["priv/erl_hash_nif.so"]}.
+
+{project_plugins, [rebar3_hex]}.
 
 {deps, []}.
 
